chore: update hn example

--- a/examples/hn/src/index.html
+++ b/examples/hn/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--ream-head-->
   </head>
-  <body class="bg-gray-100" ream-body-attrs>
+  <body class="bg-gray-100 pt-18 pb-6" ream-body-attrs>
     <!--ream-main-->
   </body>
 </html>
